# kr_mav_control

interfaces/kr_python_interface/src/kr_python_interface/: mav_interface.py
kr_mav_launch/launch/: demo.launch
kr_mav_manager/src/: manager.cpp
sim_manager/: CMakeLists.txt  package.xml  setup.py
sim_manager/launch/: sim_manager.launch
sim_manager/scripts/: sim_manager.py
